hphp/test/zend/good/ext/standard/tests/general_functions/bug55371.php
<?php

get_magic_quotes_gpc();
get_magic_quotes_runtime();

?>