hphp/test/zend/bad/ext/curl/tests/curl_multi_strerror_001.php
<?php

var_dump(strtolower(curl_multi_strerror(CURLM_OK)));
var_dump(strtolower(curl_multi_strerror(CURLM_BAD_HANDLE)));

?>